# grok2api

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.golang  README.md  config.example.json  docker-compose.yml  go.mod  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  deploy.yml  image.yml
app/: __init__.py  __main__.py  admin.py  anthropic_compat.py  auth.py  cli_pool.py  compat.py  config.py  main.py  oauth_login.py  oidc_mint.py  unified_config.py  upstream.py  usage.py  version_detect.py
app/domain/: __init__.py  accounts.py
app/infrastructure/: __init__.py  account_repository.py
app/services/: __init__.py  account_importer.py  (+1 more)
backend/: go.mod  go.sum
deploy/: .env.example  deploy-stack.sh  privoxy-warp.conf  register-machine-bom.md
docs/: ADMIN_API_V1.md  DOCKER_DELIVERY_CONTRACT.md  EXTERNAL_REGISTER.md  ROADMAP.md  openapi.yaml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
register/: README.md  __main__.py  pipeline.py
scripts/: burn_one_account.py  recover_permission_denied.py  smoke-docker-image.sh  sso_to_auth_json.py  start.ps1  stress_cli.py  sync-paneldist.sh
tests/: conftest.py  test_account_importer.py  test_account_pool_service.py  test_admin_import.py  test_anthropic.py  test_auth_parse.py  test_cli_pool.py  test_compat.py  test_config_precedence.py  test_lifespan_pool_flush.py  test_main_unit.py  test_oidc_mint_redirect.py  test_panel_import_ui.py  test_sqlite_account_repository.py  test_upstream_account_rotation.py
(+304 files in other folders)
